# fr33zmenu

./: .projectile  Cargo.toml  README.md  README.org
assets/: preview.xcf
examples/: keybinds.toml  launcher.sh  menu.toml  theme.toml
src/: args.rs  config.rs  draw.rs  keybinds.rs  macros.rs  main.rs  state.rs  theme.rs  util.rs
